[gd_scene load_steps=6 format=2]

[ext_resource path="res://map/map_overlay.gd" type="Script" id=1]
[ext_resource path="res://map/light.tscn" type="PackedScene" id=2]
[ext_resource path="res://map/laser.tscn" type="PackedScene" id=3]
[ext_resource path="res://text/dynamic_text.gd" type="Script" id=6]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[node name="MapOverlay" type="Node2D"]
material = SubResource( 1 )
script = ExtResource( 1 )

[node name="Lights" type="Node2D" parent="."]

[node name="Light1" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light2" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light3" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light4" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light5" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light6" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light7" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light8" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light9" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light10" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light11" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light12" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light13" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light14" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light15" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light16" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light17" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light18" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light19" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light20" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light21" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light22" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light23" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light24" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light25" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light26" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light27" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light28" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light29" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light30" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light31" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light32" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light33" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light34" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light35" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light36" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light37" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light38" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light39" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light40" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light41" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light42" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light43" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light44" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light45" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light46" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light47" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light48" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light49" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light50" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light51" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Light52" parent="Lights" instance=ExtResource( 2 )]
visible = false

[node name="Lasers" type="Node2D" parent="."]

[node name="Laser1" parent="Lasers" instance=ExtResource( 3 )]
visible = false

[node name="Laser2" parent="Lasers" instance=ExtResource( 3 )]
visible = false

[node name="Laser3" parent="Lasers" instance=ExtResource( 3 )]
visible = false

[node name="Laser4" parent="Lasers" instance=ExtResource( 3 )]
visible = false

[node name="Laser5" parent="Lasers" instance=ExtResource( 3 )]
visible = false

[node name="Laser6" parent="Lasers" instance=ExtResource( 3 )]
visible = false

[node name="Laser7" parent="Lasers" instance=ExtResource( 3 )]
visible = false

[node name="Laser8" parent="Lasers" instance=ExtResource( 3 )]
visible = false

[node name="Laser9" parent="Lasers" instance=ExtResource( 3 )]
visible = false

[node name="Laser10" parent="Lasers" instance=ExtResource( 3 )]
visible = false

[node name="Laser11" parent="Lasers" instance=ExtResource( 3 )]
visible = false

[node name="Laser12" parent="Lasers" instance=ExtResource( 3 )]
visible = false

[node name="Laser13" parent="Lasers" instance=ExtResource( 3 )]
visible = false

[node name="Laser14" parent="Lasers" instance=ExtResource( 3 )]
visible = false

[node name="Laser15" parent="Lasers" instance=ExtResource( 3 )]
visible = false

[node name="Laser16" parent="Lasers" instance=ExtResource( 3 )]
visible = false

[node name="Laser17" parent="Lasers" instance=ExtResource( 3 )]
visible = false

[node name="Laser18" parent="Lasers" instance=ExtResource( 3 )]
visible = false

[node name="Text1" type="Node2D" parent="."]
position = Vector2( 1024, 426 )
script = ExtResource( 6 )
size = 50.0
justify = 2
flashing = true

[node name="Text2" type="Node2D" parent="."]
position = Vector2( 1024, 726 )
script = ExtResource( 6 )
size = 50.0
justify = 2
flashing = true

[node name="CenterText" type="Node2D" parent="."]
position = Vector2( 1024, 576 )
script = ExtResource( 6 )
size = 50.0
justify = 2
flashing = true
